@@ -1,1 +1,7 @@
 .test-script-*/
+blib/
+pm_to_blib
+Makefile
+MYMETA.*
+ipgrep-v*/
+ipgrep-v*.tar.gz
