@@ -1,0 +1,17 @@
+MANIFEST
+Makefile.PL
+script/ipgrep
+Changes
+README.md
+t/01-no-options.t
+t/count.t
+t/files-with-match.t
+t/files-without-match.t
+t/file.t
+t/invert-match.t
+t/line-number.t
+t/match-first-character.t
+t/no-filename.t
+t/quiet.t
+t/version.t
+t/with-filename.t
